--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css" />
     <style>
       p {
+        background-color: green;
+        color: white;
+        font-size: 18px;
       }
     </style>
     <title>Methods for Adding CSS</title>
@@ -14,6 +17,6 @@
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button style="background-color: orange; font-size: 18px">Inline Method</button>
   </body>
 </html>
